--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
     "postinstall": "husky install",
     "test": "jest",
-    "commit": "cz"
+    "commit": "cz",
+    "start:backend": "npx netlify-cms-proxy-server",
+    "develop": "npm run start:backend & npm run start"
   },
   "lint-staged": {
     "./src/**/*.{ts,js,jsx,tsx}": [
@@ -30,6 +32,8 @@
   },
   "dependencies": {
     "gatsby": "4.0.0",
+    "gatsby-plugin-netlify-cms": "6.0.0",
+    "netlify-cms-app": "2.15.58",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tsconfig-paths-webpack-plugin": "3.5.1"
