Adds markdown field

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,3 +15,4 @@ collections:
     slug: "blog"
     fields:
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Description", name: "description", widget: "markdown" }
